--- a/main.html
+++ b/main.html
@@ -7,6 +7,45 @@
 </head>
 
 <body>
+	<table border="1">
+		<thead>
+		    <tr>
+		        <th>Roll numbers</th>
+		        <th>Names</th>
+		    </tr>
+		<thead>
+		<tbody>
+		    <tr>        
+		        <th>1</th>
+		        <td>Mayank</td>		       
+		   </tr>
+		   <tr>        
+		        <th>2</th>
+		        <td>Hari</td>		        
+		    </tr>
+		    <tr>       
+		        <th>3</th>
+		        <td>Ram</td>		        
+		    </tr>
+	</tbody>
+</table>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="logo" >
+		</li>
+		<li>
+			<video width="700" height="400" controls>
+	            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+	            your brouser doesn't support this formate <!-- if video formate is not working -->
+	        </video>
+		</li>
+		<li>
+			<audio controls>  <!-- normal consol -->
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            your brouser doesn't support this formate <!-- if audio formate is not working -->
+        </audio>
+		</li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
