--- a/main.html
+++ b/main.html
@@ -16,11 +16,11 @@
 		<thead>
 		<tbody>
 		    <tr>        
-		        <th>1</th>
+		        <td>1</td>
 		        <td>Mayank</td>		       
 		   </tr>
 		   <tr>        
-		        <th>2</th>
+		        <td>2</td>
 		        <td>Hari</td>		        
 		    </tr>
 		    <tr>       
@@ -42,7 +42,7 @@
 		</li>
 		<li>
 			<audio controls>  <!-- normal consol -->
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
             your brouser doesn't support this formate <!-- if audio formate is not working -->
         </audio>
 		</li>
