--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 		</li>
 		<li>
 			<video width="700" height="400" controls>
-	            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+	            <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 	            your brouser doesn't support this formate <!-- if video formate is not working -->
 	        </video>
 		</li>
