--- a/main.html
+++ b/main.html
@@ -41,10 +41,9 @@
 	        </video>
 		</li>
 		<li>
-			<audio controls>  <!-- normal consol -->
-            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-            your brouser doesn't support this formate <!-- if audio formate is not working -->
-        </audio>
+			  <!-- normal consol -->
+            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+			</audio>
 		</li>
 	</ol>
 	<!-- the entire body must be written by student -->
